langtools/test/tools/javac/6304921/T6304921.out
T6304921.java:671/671/680: warning: [rawtypes] found raw type: java.util.ArrayList
        List<Integer> list = new ArrayList();
                                 ^
  missing type parameters for generic class java.util.ArrayList<E>
T6304921.java:667/667/682: warning: [unchecked] unchecked conversion
        List<Integer> list = new ArrayList();
                             ^
  required: java.util.List<java.lang.Integer>
  found:    java.util.ArrayList
error: warnings found and -Werror specified
T6304921.java:727/733/737: cannot find symbol
        System.orr.println("abc"); // name not found
              ^
  symbol:   variable orr
  location: class java.lang.System
T6304921.java:812/816/822: operator + cannot be applied to int,boolean
        return 123 + true; // bad binary expression
                   ^
3 errors
2 warnings
